HURRICANE-0 How to run project in development mode explanation added